[gd_scene load_steps=10 format=3 uid="uid://b3gisrugybeyp"]

[ext_resource type="Script" path="res://src/UI.gd" id="1_58r7o"]
[ext_resource type="Texture2D" uid="uid://dk5g03u0xutii" path="res://assets/wood_texture.jpg" id="1_lbtm5"]
[ext_resource type="Texture2D" uid="uid://cuflp5wij6hu1" path="res://assets/logo.png" id="1_sr85o"]
[ext_resource type="Texture2D" uid="uid://b2uk1nvnslbaq" path="res://assets/button1.png" id="2_knpsr"]
[ext_resource type="Texture2D" uid="uid://c2of6yny4ukjg" path="res://assets/button2.png" id="3_xp80t"]
[ext_resource type="FontFile" uid="uid://cymxsojbkc144" path="res://assets/turds-font/Turds-vppD.ttf" id="4_0g1wv"]
[ext_resource type="Texture2D" uid="uid://v26idgk7pkka" path="res://assets/iconography3.png" id="6_petpu"]
[ext_resource type="Texture2D" uid="uid://ccp2lrvnicb0u" path="res://assets/iconography1.png" id="7_q6nks"]
[ext_resource type="Texture2D" uid="uid://b4fvpl27drldv" path="res://assets/iconography2.png" id="8_hd4tt"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_58r7o")

[node name="WoodPlanks" type="TextureRect" parent="."]
visible = false
modulate = Color(0.490196, 0.309804, 0.180392, 1)
offset_left = 983.0
offset_top = 104.0
offset_right = 1409.0
offset_bottom = 886.0
rotation = 1.5708
texture = ExtResource("1_lbtm5")

[node name="HomeWindow" type="ColorRect" parent="."]
offset_left = 171.0
offset_top = 81.0
offset_right = 1013.0
offset_bottom = 561.0
color = Color(0.545098, 0.545098, 0.611765, 0)

[node name="Logo" type="Sprite2D" parent="HomeWindow"]
position = Vector2(409, 109)
texture = ExtResource("1_sr85o")

[node name="PlayButton" type="TextureButton" parent="HomeWindow"]
layout_mode = 0
offset_left = 288.0
offset_top = 304.0
offset_right = 526.0
offset_bottom = 399.0
texture_normal = ExtResource("2_knpsr")
texture_pressed = ExtResource("3_xp80t")
stretch_mode = 0

[node name="Label" type="Label" parent="HomeWindow/PlayButton"]
layout_mode = 0
offset_left = 71.0
offset_top = 31.0
offset_right = 178.0
offset_bottom = 69.0
theme_override_fonts/font = ExtResource("4_0g1wv")
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TutorialWindow" type="ColorRect" parent="."]
visible = false
offset_left = 180.0
offset_top = 72.0
offset_right = 1022.0
offset_bottom = 552.0
color = Color(0.545098, 0.545098, 0.611765, 0)

[node name="Start_Button" type="TextureButton" parent="TutorialWindow"]
layout_mode = 0
offset_left = 676.0
offset_top = 398.0
offset_right = 787.0
offset_bottom = 438.0
texture_normal = ExtResource("2_knpsr")
texture_pressed = ExtResource("3_xp80t")
stretch_mode = 0

[node name="Label" type="Label" parent="TutorialWindow/Start_Button"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 110.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("4_0g1wv")
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Iconography3" type="Sprite2D" parent="TutorialWindow"]
position = Vector2(155, 330)
scale = Vector2(2.82143, 3.08929)
texture = ExtResource("6_petpu")

[node name="Label3" type="Label" parent="TutorialWindow"]
layout_mode = 0
offset_left = 56.0
offset_top = 79.0
offset_right = 258.0
offset_bottom = 214.0
theme_override_fonts/font = ExtResource("4_0g1wv")
theme_override_font_sizes/font_size = 22
text = "use directional 
pad or wasd
to move"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Iconography1" type="Sprite2D" parent="TutorialWindow"]
position = Vector2(398, 150)
scale = Vector2(2.57143, 2.91071)
texture = ExtResource("7_q6nks")

[node name="Label" type="Label" parent="TutorialWindow"]
layout_mode = 0
offset_left = 265.0
offset_top = 245.0
offset_right = 481.0
offset_bottom = 424.0
theme_override_fonts/font = ExtResource("4_0g1wv")
theme_override_font_sizes/font_size = 22
text = "monkeys will 
automatically
attack any suit 
that gets too close"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="TutorialWindow"]
layout_mode = 0
offset_left = 502.0
offset_top = 73.0
offset_right = 782.0
offset_bottom = 199.0
theme_override_fonts/font = ExtResource("4_0g1wv")
theme_override_font_sizes/font_size = 22
text = "Trees drop bananas!
Picking up a banana
will attract 5 more 
monkeys to your Band!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Iconography2" type="Sprite2D" parent="TutorialWindow"]
position = Vector2(628, 314)
scale = Vector2(2.91964, 2.96429)
texture = ExtResource("8_hd4tt")

[node name="GameOverWindow" type="ColorRect" parent="."]
visible = false
offset_left = 465.0
offset_top = 146.0
offset_right = 748.0
offset_bottom = 487.0
color = Color(0.196078, 0.196078, 0.196078, 0.647059)

[node name="StartOver" type="TextureButton" parent="GameOverWindow"]
layout_mode = 0
offset_left = 86.0
offset_top = 265.0
offset_right = 197.0
offset_bottom = 305.0
texture_normal = ExtResource("2_knpsr")
texture_pressed = ExtResource("3_xp80t")
stretch_mode = 0

[node name="Label" type="Label" parent="GameOverWindow/StartOver"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 110.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("4_0g1wv")
text = "Start Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="Label" parent="GameOverWindow"]
layout_mode = 0
offset_left = 95.0
offset_top = 46.0
offset_right = 187.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("4_0g1wv")
text = "GAME OVER"

[node name="TimeSurvived_label" type="Label" parent="GameOverWindow"]
layout_mode = 0
offset_left = 87.0
offset_top = 89.0
offset_right = 196.0
offset_bottom = 115.0
text = "Time Survived"

[node name="Largest Band_label" type="Label" parent="GameOverWindow/TimeSurvived_label"]
layout_mode = 0
offset_left = 3.0
offset_top = 52.0
offset_right = 105.0
offset_bottom = 78.0
text = "Largest Band"

[node name="Suits Mauled_label" type="Label" parent="GameOverWindow/TimeSurvived_label"]
layout_mode = 0
offset_left = 5.0
offset_top = 113.0
offset_right = 105.0
offset_bottom = 139.0
text = "Suits Mauled"

[node name="TimeSurvived" type="Label" parent="GameOverWindow/TimeSurvived_label"]
layout_mode = 0
offset_left = 18.0
offset_top = 25.0
offset_right = 94.0
offset_bottom = 51.0
text = "0 s
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LargestBand" type="Label" parent="GameOverWindow/TimeSurvived_label"]
layout_mode = 0
offset_left = 18.0
offset_top = 81.0
offset_right = 94.0
offset_bottom = 107.0
text = "0 
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SuitsMauled" type="Label" parent="GameOverWindow/TimeSurvived_label"]
layout_mode = 0
offset_left = 19.0
offset_top = 143.0
offset_right = 95.0
offset_bottom = 169.0
text = "0 
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HomeWindow/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TutorialWindow/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="GameOverWindow/StartOver" to="." method="_on_start_over_pressed"]
